Complete Phase 1 project: HTML, CSS, JS, and README

--- a/index.html
+++ b/index.html
@@ -1,26 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>Dog Breed Search</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
+<h1>Brewery Explorer</h1>
 
-  <h1>Dog Breed Search</h1>
+<form id="search-form">
+  <input id="search-input" placeholder="Filter by city…" />
+</form>
 
-  <form id="search-form">
-    <input
-      type="text"
-      id="breed-input"
-      placeholder="Enter dog breed (e.g. husky)"
-      required
-    />
-    <button type="submit">Search</button>
-  </form>
+<ul id="brewery-list"></ul>
 
-  <div id="results"></div>
-
-  <script src="index.js"></script>
-</body>
-</html>
+<div id="details"></div>
