Clean refactor to Brewery Explorer SPA meeting Phase 1 requirements

--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<h1>Brewery Explorer</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <title>Brewery Explorer</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
-<form id="search-form">
-  <input id="search-input" placeholder="Filter by city…" />
-</form>
+  <h1>Brewery Explorer</h1>
 
-<ul id="brewery-list"></ul>
+  <input
+    id="search-input"
+    placeholder="Filter breweries by city"
+  />
 
-<div id="details"></div>
+  <ul id="brewery-list"></ul>
+
+  <div id="details"></div>
+
+  <script src="index.js"></script>
+</body>
+</html>
